[package]
name = "redox_hir_pretty"
version = "0.0.0"
edition = "2024"

[dependencies]
# tidy-alphabetical-start
redox_abi = { path = "../redox_abi" }
redox_ast = { path = "../redox_ast" }
redox_ast_pretty = { path = "../redox_ast_pretty" }
redox_hir = { path = "../redox_hir" }
redox_span = { path = "../redox_span" }
# tidy-alphabetical-end
