[package]
name = "redox_incremental"
version = "0.0.0"
edition = "2024"

[dependencies]
# tidy-alphabetical-start
rand = "0.9.0"
redox_data_structures = { path = "../redox_data_structures" }
redox_errors = { path = "../redox_errors" }
redox_fs_util = { path = "../redox_fs_util" }
redox_graphviz = { path = "../redox_graphviz" }
redox_hashes = { path = "../redox_hashes" }
redox_hir = { path = "../redox_hir" }
redox_macros = { path = "../redox_macros" }
redox_middle = { path = "../redox_middle" }
redox_serialize = { path = "../redox_serialize" }
redox_session = { path = "../redox_session" }
redox_span = { path = "../redox_span" }
tracing = "0.1"
# tidy-alphabetical-end
